# srem

./: README.md  srem.cabal  stack.yaml
cbits/: a.out  getidletime_posix.c
src/: Main.hs
src/Control/: SremConfig.hs
src/Data/Maybe/: Read.hs
src/Types/: Reminder.hs
src/Types/Reminder/: CmdLine.hs
src/Utility/: CmdLineRem.hs  Emacs.hs  EventCache.hs  Notify.hs
src/Utility/IdleUser/: X11.hs
src/Utility/Notify/: Posix.hs  Windows.hs
