name:                srem
version:             2.0.0
synopsis:            Timed reminders as notifications
homepage:            https://github.com/spwhitton/srem.git
license:             GPL-3
license-file:        LICENSE
author:              Sean Whitton
maintainer:          spwhitton@spwhitton.name
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable srem
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , process
                     , regex-posix
                     , modular-arithmetic
                     , time
                     , filepath
                     , split
                     , old-locale
                     , tuple
                     , fdo-notify
                     , dbus
  hs-source-dirs:      src
  default-language:    Haskell2010
