name:                srem
version:             2.0.0
synopsis:            Timed reminders as notifications
homepage:            https://github.com/spwhitton/srem.git
license:             GPL-3
license-file:        LICENSE
author:              Sean Whitton
maintainer:          spwhitton@spwhitton.name
category:            Text
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  cbits
-- extra-include-dirs:  /usr/include
-- extra-lib-dirs:      /usr/lib/i386-linux-gnu

executable srem
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , process
                     , regex-posix
                     , modular-arithmetic
                     , time
                     , filepath
                     , split
                     , old-locale
                     , tuple
                     , fdo-notify
                     , dbus
  hs-source-dirs:      src
  default-language:    Haskell2010

  -- TODO conditional on building on GNU/Linux
  c-sources:         cbits/getIdleTime_posix.c
  extra-libraries:   Xss
  includes:          X11/extensions/scrnsaver.h
